hphp/hack/test/typecheck/reified_generics/new_without_newable_simple.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function f<reify T>(): void {
  new T();
}
